--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -5,13 +5,13 @@ calendly:
 dribbble:
 facebook:
 flickr:
-github: sylhare
+github: guywhataguy
 gitlab:
 google-scholar:   # e.g. "WXAAOb0AAAAJ"
 instagram:
 hacker-news:
 keybase:
-linkedin:
+linkedin: guywhataguy
 mail:             # e.g. "sam@mail.com"
 map:              # e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
@@ -29,7 +29,7 @@ steam:
 telegram:
 tumblr:
 twitch:
-twitter:
+twitter: whtaguy
 vimeo:
 vk:
 wordpress:
