--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,17 @@
 # SITE CONFIGURATION
-baseurl: "/"
-url: "https://sylhare.github.io"
+baseurl: ""
+url: "https://guywhataguy.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 title: whtaguy                                    # site's title
-description: "A website with blog posts and pages"      # used by search engines
-avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
+description: "I write about reverse engineering, vulnerability research, binary exploitation and operating system internals"      # used by search engines
+avatar: assets/img/whtaguy_logo.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
-header_feature_image: assets/img/pexels/triangular.jpeg
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+header_text: whtaguy research # Change Blog header text
+header_feature_image: assets/img/whtaguy_research_bg.png
+footer_text: 2021 Guy Levin. All Right Reserved.
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
