--- a/_data/social.yml
+++ b/_data/social.yml
@@ -3,12 +3,13 @@ rss: true         # Icons on the footer
 feed:
   path: feed.xml  # RSS feed path
 
+
 # Share button options
 share:
   email: true
   facebook: true
   linkedin: true
-  pinterest: true
+  pinterest: false
   pocket:
   reddit: true
   tumblr: true
