added contact page and author on each page

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -20,5 +20,5 @@ unknown:
   url:
 guy:
   name: "Guy Levin"
-  avatar: "https://avatars.githubusercontent.com/u/33753158?s=460&v=4"
+  avatar: "/assets/img/guy-levin-hiking-cricle-crop.png"
   url: "/about/"
