added social link to stanford profile

--- a/_data/icons_builder.yml
+++ b/_data/icons_builder.yml
@@ -78,5 +78,8 @@ vk:
 wordpress:
   pre: "https://"
   pos: ".wordpress.com/"
+stanford:
+  pre: "https://profiles.stanford.edu/"
+  icon: "fas fa-university"
 youtube:
   pre: "https://www.youtube.com/channel/"
