--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -16,7 +16,7 @@ mail:             # e.g. "sam@mail.com"
 map:              # e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
 matrix:           # e.g. "@sam:matrix.org"
-medium:
+medium: guy-maverick-levin
 patreon:
 phone:            # e.g. "+11111111111"
 pinterest:
