--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -19,6 +19,6 @@ unknown:
   avatar:
   url:
 guy:
-  name: "Guy Levin"
-  avatar: "/assets/img/guy-levin-hiking-cricle-crop.png"
+  name: "Guy Maverick Levin"
+  avatar: "/assets/img/Guy Maverick Levin Blockchain Hacker (circle crop).png"
   url: "/about/"
