--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -5,18 +5,18 @@ calendly:
 dribbble:
 facebook:
 flickr:
-github: guywhataguy
+github: mavlevin
 gitlab:
 google-scholar:   # e.g. "WXAAOb0AAAAJ"
 instagram:
 hacker-news:
 keybase:
-linkedin: guywhataguy
+linkedin: mavlevin
 mail:             # e.g. "sam@mail.com"
 map:              # e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
 matrix:           # e.g. "@sam:matrix.org"
-medium: guy-maverick-levin
+medium: mavlevin
 patreon:
 phone:            # e.g. "+11111111111"
 pinterest:
