--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ color_image: /assets/img/lineart.png                    # A bit transparent for 
 # For layout customization, go to the "_sass > base" folder, and check "_variables.scss"
 katex: false                                             # Enable if using math markup
 mermaid: true                                           # Enable mermaid-js for sequence and diagrams
-google_analytics: UA-138291732-1                        # Tracking ID, e.g. "UA-000000-01"
+google_analytics: G-31533WHCNF                        # Tracking ID, e.g. "UA-000000-01"
 cookie_consent: false                                   # To respect the usage of cookies
 color_theme: auto                                       # auto, dark or light
 
