--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
 guy:
-  name: "Guy Maverick Levin"
+  name: "Mav Levin"
   avatar: "/assets/img/Guy Maverick Levin Blockchain Hacker (circle crop).png"
   url: "/about/"
